--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "user-agent",
     "ip-address"
   ],
-  "author": "Your Name",
+  "author": "trucvhc <trucvhc@fpt.com> (https://github.com/trucvhc)",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
